# core-lib

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt
src/core/: CMakeLists.txt  EnTTRegistry.cpp  EnTTRegistry.cppm  GlobalSpatial.cppm  QuitAppRequest.cppm  Scheduler.cpp  Scheduler.cppm  Spatial.cppm  Timer.cpp  Timer.cppm  Window.cppm  WindowInternal.cppm  entt.cppm  kangaru.cpp  kangaru.cppm
src/core-reflection/: CMakeLists.txt  GlobalSpatial.cppm  Reflection.cpp  Reflection.cppm  Spatial.cppm  glmVec2.cppm  glmVec3.cppm  glmVec4.cppm
src/core-reflection/node/: CMakeLists.txt  EnTTNode.cppm  Node.cppm
src/core/logging/: CMakeLists.txt  Log.cpp  Log.cppm  LogReportedFlag.cppm
src/core/logging/services/: CMakeLists.txt  LogReportingSystemService.cppm
src/core/logging/systems/: CMakeLists.txt  LogReportingSystem.cpp  LogReportingSystem.cppm
src/core/node/: CMakeLists.txt  EnTTNode.cpp  EnTTNode.cppm  Node.cpp  Node.cppm  NodeHandle.cpp  NodeHandle.cppm  TemplateNode.cppm
src/core/node/services/: CMakeLists.txt  NodeParentGlobalSpatialUpdateSystemService.cppm
src/core/node/systems/: CMakeLists.txt  NodeParentGlobalSpatialUpdateSystem.cpp  NodeParentGlobalSpatialUpdateSystem.cppm
src/core/platform/: CMakeLists.txt  GLFWWindow.cppm  NativeWindowHandles.cppm  QuitAppRequest.cppm  Window.cppm
src/core/platform/services/: CMakeLists.txt  GLFWSystemService.cppm
src/core/platform/systems/: CMakeLists.txt  GLFWSystem.cpp  GLFWSystem.cppm
src/core/processor/: CMakeLists.txt  Process.cppm  ProcessError.cpp  ProcessError.cppm  ProcessErrorLoggedFlag.cppm
src/core/processor/services/: CMakeLists.txt  ProcessErrorLoggingSystemService.cppm  ProcessErrorRetrySystemService.cppm
src/core/processor/systems/: CMakeLists.txt  ProcessErrorLoggingSystem.cpp  ProcessErrorLoggingSystem.cppm  ProcessErrorRetrySystem.cpp  ProcessErrorRetrySystem.cppm
src/core/reflection/: Any.cpp  Any.cppm  BasicTypeTraits.cpp  BasicTypeTraits.cppm  CMakeLists.txt  ClassReflection.cpp  ClassReflection.cppm  EnTTClassAnnotation.cppm  EnTTComponentAttribute.cppm  EnumReflection.cpp  EnumReflection.cppm  MapTypeTraits.cpp  MapTypeTraits.cppm  OptionalTypeTraits.cpp  OptionalTypeTraits.cppm  Reflect.cppm  ReflectionContext.cpp  ReflectionContext.cppm  TypeId.cpp  TypeId.cppm  TypeInfo.cpp  TypeInfo.cppm  TypeInfoImpl.cpp  TypeInfoImpl.cppm  TypeReflection.cpp  TypeReflection.cppm  TypeTraits.cpp  TypeTraits.cppm  VariantTypeTraits.cpp  VariantTypeTraits.cppm  VectorTypeTraits.cpp  VectorTypeTraits.cppm
src/core/reflection/type_traits/: BasicTypeTraits.cppm  CMakeLists.txt  SharedPtrTypeTraits.cpp  SharedPtrTypeTraits.cppm
src/core/resources/: CMakeLists.txt  FileLoadRequest.cppm  ImageResource.cppm  RawDataResource.cppm  Resource.cpp  Resource.cppm  ResourceCache.cpp  ResourceCache.cppm  ResourceHandle.cpp  ResourceHandle.cppm  ResourceHandleUtils.cppm  ResourceLoadRequest.cpp  ResourceLoadRequest.cppm  SpriteResource.cppm
src/core/resources/descriptors/: CMakeLists.txt  FileDescriptor.cppm  ImageDescriptor.cppm
src/core/resources/services/: CMakeLists.txt  FileLoadSystemService.cppm  ResourceLoadSystemService.cppm
src/core/resources/systems/: CMakeLists.txt  FileLoadSystem.cpp  FileLoadSystem.cppm  ImageLoadSystem.cpp  ImageLoadSystem.cppm  ResourceLoadSystem.cpp  ResourceLoadSystem.cppm
src/core/serialization/: CMakeLists.txt  JsonTypeLoaderAdapter.cpp  JsonTypeLoaderAdapter.cppm  JsonTypeSaverAdapter.cpp  JsonTypeSaverAdapter.cppm  TypeLoader.cppm  TypeSaver.cppm
src/core/serialization/services/: CMakeLists.txt  TypeLoaderSystemService.cppm
src/core/serialization/systems/: CMakeLists.txt  TypeLoaderSystem.cpp  TypeLoaderSystem.cppm
src/core/services/: CMakeLists.txt  CoreSystemsService.cpp  CoreSystemsService.cppm  EnTTRegistryService.cppm  FileLoadSystemService.cppm  GlobalSpatialUpdateSystemService.cppm  LogReportingSystemService.cppm  ProcessErrorLoggingSystemService.cppm  ProcessErrorRetrySystemService.cppm  ResourceLoadSystemService.cppm  SchedulerService.cppm  TimerService.cppm
src/core/systems/: CMakeLists.txt  CoreSystems.cpp  CoreSystems.cppm  GLFWSystem.cpp  GLFWSystem.cppm  GlobalSpatialUpdateSystem.cpp  GlobalSpatialUpdateSystem.cppm
src/core/visitor/: CMakeLists.txt  EntityVisitor.cppm
src/core/visitor/services/: CMakeLists.txt  EntityVisitorSystemService.cppm
src/core/visitor/systems/: CMakeLists.txt  EntityVisitorSystem.cpp  EntityVisitorSystem.cppm
tests/: CMakeLists.txt  FileLoadSystemTests.cpp  GLFWSystemTests.cpp
tests/assets/: TestFileResource.txt
tests/reflection/: AnyTests.cpp  CMakeLists.txt  ClassReflectionTests.cpp  JsonTypeLoaderAdapterTests.cpp  JsonTypeSaverAdapterTests.cpp  TypeIdTests.cpp
tests/serialization/: CMakeLists.txt  JsonTypeAdapterTestClasses.cppm  JsonTypeLoaderAdapterTests.cpp  JsonTypeSaverAdapterTests.cpp
